--- a/Studienarbeit/content/Ausblick.tex
+++ b/Studienarbeit/content/Ausblick.tex
@@ -3,3 +3,10 @@
 Attribute:\\
 Test nach x Sekunden\\
 Test nach einem Unity-Event
+
+Anpassung der Suite zum ausführen nicht simple tests
+
+Simulation von Spielereingaben
+
+Bessere Präsentation als durch Konsole (Overlay von GUI-Elementen)
+Von Bericht direkt zum Source-Code -> Optimierung der Texte (StackTrace-Frames)
